# serde-bool

./: .cspell.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  justfile
.github/workflows/: ci.yml  coverage.yml  lint.yml
crates/detrim/: CHANGELOG.md  Cargo.toml  README.md
crates/detrim/src/: cow_str.rs  hashset_string.rs  lib.rs  string.rs  string_non_empty.rs  vec_string.rs
crates/serde-bool/: CHANGELOG.md  Cargo.toml  README.md
crates/serde-bool/src/: lib.rs
crates/serde-decimal/: CHANGELOG.md  Cargo.toml
crates/serde-decimal/src/: double_option_arbitrary_precision.rs  double_option_float.rs  double_option_str.rs  lib.rs  non_required_arbitrary_precision.rs  non_required_float.rs  non_required_str.rs  nullable_arbitrary_precision.rs  nullable_float.rs  nullable_str.rs
crates/serde-secrecy/: CHANGELOG.md  Cargo.toml
crates/serde-secrecy/src/: lib.rs
src/: lib.rs
