[package]
name = "serde-bool"
version = "0.1.3"
authors = ["Rob Ede <robjtede@icloud.com>"]
description = "Single value, true or false, boolean deserializers"
categories = ["encoding", "no-std", "no-std::no-alloc"]
keywords = ["serde", "utilities", "serialization", "deserialization"]
repository = "https://github.com/x52dev/serde-bool"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"

[dependencies]
serde = { version = "1", default-features = false }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
