[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
authors = ["Rob Ede <robjtede@icloud.com>"]
repository = "https://github.com/x52dev/serde-utils"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"

[workspace.dependencies]

[workspace.lints.rust]
rust_2018_idioms = "deny"
nonstandard_style = "deny"
future_incompatible = "deny"
missing_docs = { level = "warn", priority = -1 }
