[package]
name = "detrim"
version = "0.1.4"
description = "Automatic string trimming with serde"
categories = ["encoding", "no-std"]
keywords = ["deserialization", "utilities", "serde"]
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = []

[dependencies]
serde = { version = "1", default-features = false, features = ["alloc"] }

[dev-dependencies]
serde = { version = "1", features = ["std", "derive"] }
serde_json = "1"

[lints]
workspace = true
