[package]
name = "serde-bool"
version = "0.1.3"
description = "Single value, true or false, boolean deserializers"
categories = ["encoding", "no-std", "no-std::no-alloc"]
keywords = ["serde", "utilities", "serialization", "deserialization"]
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1", default-features = false }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
