[package]
name = "serde-secrecy"
version = "0.2.4"
description = "Serde support for secrecy types"
categories = ["encoding"]
keywords = ["serde", "utilities", "serialization", "deserialization"]
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

[dependencies]
secrecy = "0.10"
serde = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
